[project]
name = "gluetun-protonvpn-sidecar-manager"
version = "0.1.0"
description = "ProtonVPN Sidecar Manager"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "bcrypt",
    "python-gnupg",
    "pyopenssl",
    "distro",
    "dnspython",
    "urllib3<2",
    "proton-client @ git+https://github.com/ProtonMail/proton-python-client.git@0.7.1"
]

[tool.uv.extra-build-dependencies]
"proton-client" = [
    "setuptools",
    "wheel",
    "python-gnupg",
    "requests",
    "bcrypt",
    "pyopenssl",
    "distro",
    "urllib3<2"
]
